--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
         <img id="user-avatar" class="avatar" alt="Avatar người dùng" style="width: 100px;">
         <div class="avatar-select">
           <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="avatar-option" onclick="changeAvatar(this)" data-url="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
-          <img src="https://i.imgur.com/your-first-image-url.jpg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/your-first-image-url.jpg">
-          <img src="https://i.imgur.com/your-second-image-url.jpg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/your-second-image-url.jpg">
+          <img src="https://i.imgur.com/oJHpVuH.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/your-first-image-url.jpg">
+          <img src="https://i.imgur.com/LqdqKWC.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/your-second-image-url.jpg">
         </div>
       </div>
     </div>
