--- a/index.html
+++ b/index.html
@@ -365,6 +365,8 @@
           <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="avatar-option" onclick="changeAvatar(this)" data-url="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
           <img src="https://i.imgur.com/Uz2h1qN.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/Uz2h1qN.jpeg">
           <img src="https://i.imgur.com/4jK8vW3.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/4jK8vW3.jpeg">
+          <img src="https://i.imgur.com/LqdqKWC.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/LqdqKWC.jpeg">
+          <img src="https://i.imgur.com/oJHpVuH.jpeg" class="avatar-option" onclick="changeAvatar(this)" data-url="https://i.imgur.com/oJHpVuH.jpeg">
         </div>
       </div>
     </div>
@@ -372,6 +374,9 @@
       <div class="card">
         <h3>Thông tin</h3>
         <p>ID: <span id="user-id"></span></p>
+        <p>Tên: <span id="user-username"></span></p>
+        <p>Gmail: <span id="user-gmail"></span></p>
+        <p>Role: <span id="user-role"></span></p>
       </div>
     </div>
     <div class="form-group">
@@ -850,6 +855,12 @@
       userAvatar.src = currentUser.avatar;
       const userIdDisplay = document.getElementById('user-id');
       userIdDisplay.textContent = currentUser.id;
+      const userUsernameDisplay = document.getElementById('user-username');
+      userUsernameDisplay.textContent = currentUser.username;
+      const userGmailDisplay = document.getElementById('user-gmail');
+      userGmailDisplay.textContent = currentUser.gmail || 'Chưa có';
+      const userRoleDisplay = document.getElementById('user-role');
+      userRoleDisplay.textContent = currentUser.role;
       document.querySelectorAll('.avatar-option').forEach(option => {
         if (option.getAttribute('data-url') === currentUser.avatar) {
           option.classList.add('selected');
@@ -935,4 +946,4 @@
     updateSocialLinks();
   </script>
 </body>
-  </html>
+      </html>
