--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập & Đăng ký</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome for eye icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -13,9 +15,13 @@
             <h2>Đăng nhập</h2>
             <form id="login">
                 <input type="email" id="login-email" placeholder="Email" required>
-                <input type="password" id="login-password" placeholder="Mật khẩu" required>
+                <div class="password-container">
+                    <input type="password" id="login-password" placeholder="Mật khẩu" required>
+                    <span class="toggle-password" onclick="togglePassword('login-password')"><i class="fas fa-eye"></i></span>
+                </div>
                 <button type="submit">Đăng nhập</button>
             </form>
+            <p><a href="#" id="show-forgot-password">Quên mật khẩu?</a></p>
             <p>Chưa có tài khoản? <a href="#" id="show-signup">Đăng ký</a></p>
         </div>
         <!-- Form Đăng ký -->
@@ -23,10 +29,22 @@
             <h2>Đăng ký</h2>
             <form id="signup">
                 <input type="email" id="signup-email" placeholder="Email" required>
-                <input type="password" id="signup-password" placeholder="Mật khẩu" required>
+                <div class="password-container">
+                    <input type="password" id="signup-password" placeholder="Mật khẩu" required>
+                    <span class="toggle-password" onclick="togglePassword('signup-password')"><i class="fas fa-eye"></i></span>
+                </div>
                 <button type="submit">Đăng ký</button>
             </form>
             <p>Đã có tài khoản? <a href="#" id="show-login">Đăng nhập</a></p>
+        </div>
+        <!-- Form Quên mật khẩu -->
+        <div class="form-box hidden" id="forgot-password-form">
+            <h2>Quên mật khẩu</h2>
+            <form id="forgot-password">
+                <input type="email" id="forgot-password-email" placeholder="Email" required>
+                <button type="submit">Gửi link đặt lại</button>
+            </form>
+            <p><a href="#" id="show-login-from-forgot">Quay lại đăng nhập</a></p>
         </div>
     </div>
 
@@ -48,4 +66,4 @@
     </script>
     <script src="script.js"></script>
 </body>
-</html>
+    </html>
