--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for eye icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Google Fonts: Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
+        <!-- Thông báo -->
+        <div id="notification" class="notification hidden"></div>
         <!-- Form Đăng nhập -->
         <div class="form-box" id="login-form">
             <h2>Đăng nhập</h2>
@@ -66,4 +70,4 @@
     </script>
     <script src="script.js"></script>
 </body>
-    </html>
+                    </html>
