--- a/dashboard.html
+++ b/dashboard.html
@@ -19,21 +19,29 @@
         </div>
     </div>
 
-    <!-- Firebase SDK -->
+    <!-- Firebase SDK (CDN) -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script>
         // Cấu hình Firebase
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCHdKxEd5Y12tLNufyIVri3LvHnaxl9kt4",
+            authDomain: "test-5fa6d.firebaseapp.com",
+            projectId: "test-5fa6d",
+            storageBucket: "test-5fa6d.firebasestorage.app",
+            messagingSenderId: "738112109950",
+            appId: "1:738112109950:web:f1ba6af2e2b58d825b472f",
+            measurementId: "G-GHFB48YK6W"
         };
+
         // Khởi tạo Firebase
-        firebase.initializeApp(firebaseConfig);
+        try {
+            firebase.initializeApp(firebaseConfig);
+            console.log('Firebase khởi tạo thành công');
+        } catch (error) {
+            console.error('Lỗi khởi tạo Firebase:', error);
+            showNotification('Lỗi cấu hình Firebase ❌', false);
+        }
 
         // Hiển thị tên người dùng
         firebase.auth().onAuthStateChanged((user) => {
@@ -46,30 +54,38 @@
         });
 
         // Hàm đăng xuất
- estilo de botones
         function signOut() {
             firebase.auth().signOut()
                 .then(() => {
                     showNotification('Đăng Xuất Thành Công ✅', true);
                     setTimeout(() => {
                         window.location.href = 'index.html';
-                    }, 2000);
+                    }, 4000);
                 })
                 .catch((error) => {
                     showNotification('Đăng Xuất Thất Bại ❌', false);
+                    console.error('Lỗi đăng xuất:', error);
                 });
         }
 
         // Hàm hiển thị thông báo
         function showNotification(message, isSuccess) {
-            const notification = document.getElementById('notification');
-            notification.textContent = message;
-            notification.classList.remove('hidden');
-            notification.classList.add(isSuccess ? 'success' : 'error');
-            setTimeout(() => {
-                notification.classList.add('hidden');
-                notification.classList.remove(isSuccess ? 'success' : 'error');
-            }, 3000);
+            try {
+                const notification = document.getElementById('notification');
+                if (!notification) {
+                    console.error('Không tìm thấy phần tử notification');
+                    return;
+                }
+                notification.textContent = message;
+                notification.classList.remove('hidden', 'success', 'error');
+                notification.classList.add(isSuccess ? 'success' : 'error', 'show');
+                setTimeout(() => {
+                    notification.classList.remove('show');
+                    notification.classList.add('hidden');
+                }, 4000);
+            } catch (error) {
+                console.error('Lỗi khi hiển thị thông báo:', error);
+            }
         }
     </script>
 </body>
